// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Aircraft draws_id_matrix assume_friend 1`] = `
<canvas
  data-snapshot-image="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAeCAYAAAAVdY8wAAAABmJLR0QA/wD/AP+gvaeTAAAAqklEQVQ4jWNgGM5AsIjvn2AR3z90cSZiDRhVOKgVzvDViCSoMChW+VOm0c1lq0K1VfAqXLf4Lh/jf0aGMrFXtwhaHX1b6dUDkdeMrQFKU3EpZIQxOCs4/jP/Y2Jg/cPyn4GBgeF93ycUj8I5NTekpn3h+sbwhes7IwMWgCIolSf075ngO0bBz3z/cZrIwMDA0PRc0gKfh1CAY4LCT2x5BisIilX+RLTJtAcA2qQwxZj4tV0AAAAASUVORK5CYII="
  height="30"
  width="10"
/>
`;

exports[`Aircraft draws_id_matrix hostile 1`] = `
<canvas
  data-snapshot-image="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAeCAYAAAAVdY8wAAAABmJLR0QA/wD/AP+gvaeTAAAAfklEQVQ4je3TMQrCUBBF0RM7K3sr9xBwb/ZZh/uxdgOB9IKNFgGfTQoJJj+NIOKrhpnLnWaGX05oQzvur5YK/uBXg2FbBEODLqyL2tCH01DPXs8B+1BPyaoX6wU97sNgN7W+Dgm3d6vH8HmAi+AmPIqvUHHFcdY2MjeL4c/nCeVSKnb9wiaSAAAAAElFTkSuQmCC"
  height="30"
  width="10"
/>
`;

exports[`Aircraft draws_id_matrix neutral 1`] = `
<canvas
  data-snapshot-image="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAeCAYAAAAVdY8wAAAABmJLR0QA/wD/AP+gvaeTAAAArUlEQVQ4jWNgGM5gglDBvwlCBf/QxZmINWBU4aBWeMXMzJ2gwm363o/Xnvbc8djSUhqvQq+LW2UZmf4zbH+k+4ig1Za6J68/eyrJdNLCpBqXQkYYo4Or/D8T818GNtY//xkYGBgK3k1A8Sic46i3t+bbZx6Gr194GBmwALhC8xNnWsXEX///9YsZtxthwFXhjA4jVvPQFKqePHlNV+PqRxz+wQTb9L0fE62Y9gAAjX4yCb+HuNMAAAAASUVORK5CYII="
  height="30"
  width="10"
/>
`;

exports[`Aircraft draws_id_matrix suspect 1`] = `
<canvas
  data-snapshot-image="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAeCAYAAAAVdY8wAAAABmJLR0QA/wD/AP+gvaeTAAAAoUlEQVQ4je2PMQrCQBBF30atJI2tB7AXSw/gBdJI8AaBHEVIaWfhBcQDiMHOKpVtGq8gmPittjHsJo0g4quG4fHnD/wyyqiUUb3vg64Bf/GrRcVMW0Wl5Cy4KGLkFc2aOQJmlO0dzxwYM9SKpUs0dtCGJzXigQBMQr+ZCHAiJiQgpOc+DZgtO27cGfg6Wo5M/M/Y1D0lBVeX3EApeWf587wAxwYjgckWlJgAAAAASUVORK5CYII="
  height="30"
  width="10"
/>
`;
